# context-browser-fork

./: .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.md
.github/workflows/: release.yml
src/context_browser/: addon.py  preferences.py  temp_preferences.py
src/context_browser/ops/: bookmarks.py  context_browser.py  prop_popup.py
src/context_browser/utils/: collection_utils.py
tools/: check_python_syntax.py
